--- a/src/pages/Fix/styles.css
+++ b/src/pages/Fix/styles.css
@@ -18,6 +18,11 @@
     height: 100vh;
     object-fit: cover;
 }
+.image-full-contain{
+    width: 100vw;
+    height: 100vh;
+    object-fit: contain;
+}
 
 canvas {
     display: block;
