--- a/src/pages/Fix/styles.css
+++ b/src/pages/Fix/styles.css
@@ -2,13 +2,27 @@
     position: fixed;
     right: 0;
     bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
     background: #000;
+    z-index: 4;
+    width: 100vw;
+    height: 100vh;
+}
+#tenWordsVideo{
+    position: absolute;
+    right: 0;
+    top: 0;
     z-index: 2;
+    width: 30vw;
+    height: auto;
 }
 .video-full{
     width: 100vw;
+    height: 100vh;
+    background: #000;
+    object-fit: cover;
+}
+.video-full-section3DVideo{
+    width: 100%;
     height: 100vh;
     background: #000;
     object-fit: cover;
@@ -19,9 +33,12 @@
     object-fit: cover;
 }
 .image-full-contain{
-    width: 100vw;
+    width: 130%;
+    max-width: unset;
     height: 100vh;
     object-fit: contain;
+    position: relative;
+    left: -15%;
 }
 
 canvas {
@@ -29,7 +46,7 @@ canvas {
     width: 100%;
     height: 100%;
 }
-#section3DWebsite, #section3DVideo, #section3DModels, #sectionBookACall{
+#section3DWebsite, #section3DVideo, #section3DModels, #sectionBookACall, #sectionImages, #sectionGlobe{
     width: 100vw;
     height: 100vh;
 }
@@ -49,4 +66,133 @@ canvas {
     left: -60px;
     bottom: 50%;
     color: rgb(231, 231, 62);
+}
+.text-wrapper{
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    opacity: 0;
+    background: rgba(0,0,0,0.5);
+}
+.text-wrapper.text-wrapper-appear{
+    transition: opacity 2s linear;
+    opacity: 1
+}
+.text-wrapper span{
+    color: #FFF;
+    font-size: 18px;
+    font-weight: 600;
+}
+.section3DVideo-container{
+    display: flex;
+}
+.section3DModels-container{
+    display: flex;
+}
+.w-40{
+    width: 40%;
+}
+.w-60{
+    width: 60%;
+}
+.w-100{
+    width: 100%;
+}
+.w-50{
+    width: 50%;
+}
+.section-text-wrapper{
+    padding: 30px;
+}
+.section-text-wrapper span{
+    color: #000;
+    font-style: normal;
+    font-size: 18px;
+    line-height: 34px;
+}
+.relative{
+    position: relative;
+}
+.section-text-wrapper-absolute{
+    position: absolute;
+    padding: 50px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+.title span{
+    font-style: normal;
+    font-size: 70px;
+    line-height: 120%;
+    text-transform: uppercase;
+}
+.description{
+    text-align: center;
+}
+.description span{
+    font-style: normal;
+    font-size: 23px;
+    line-height: 150%;
+    text-align: center;
+    text-transform: uppercase;
+}
+.section-text-wrapper-absolute-animate span{
+    color: #000;
+    text-shadow: 1px 1px 0 #FFF, 1px -1px 0 #FFF, -1px 1px 0#FFF, -1px -1px 0#FFF, 1px 0px 0#FFF, 0px 1px 0#FFF, -1px 0px 0#FFF, 0px -1px 0#FFF;
+}
+
+.section-text-animation span{
+    animation: textAnimate 1s linear;
+}
+@keyframes textAnimate{
+    0%{
+        text-shadow: 1px 1px 0 #FFF, 1px -1px 0 #FFF, -1px 1px 0#FFF, -1px -1px 0#FFF, 1px 0px 0#FFF, 0px 1px 0#FFF, -1px 0px 0#FFF, 0px -1px 0#FFF, 0px 0px 40px #FFFFFF;
+    }
+    50%{
+        text-shadow: 0 0 5px #FFF, 0 0 10px #FFF, 0 0 15px #FFF, 0 0 20px #FFF, 0 0 30px #FFF, 0 0 40px #FFF, 0 0 55px #FFF, 0 0 75px #FFF;
+    }
+    100%{
+        text-shadow: 1px 1px 0 #FFF, 1px -1px 0 #FFF, -1px 1px 0#FFF, -1px -1px 0#FFF, 1px 0px 0#FFF, 0px 1px 0#FFF, -1px 0px 0#FFF, 0px -1px 0#FFF;
+    }
+}
+.btn-book-a-call{
+    margin-top: 50px;
+    text-transform: uppercase;
+    color: rgb(13, 4, 56);
+    background-color: #CCB400;
+    border-radius: 10px;
+    padding: 20px;
+    font-size: 35px;
+    font-weight: 900;
+}
+.btn-book-a-call:hover{
+    animation: buttonRotate 1.3s linear;
+}
+
+@keyframes buttonRotate{
+    0%{
+        transform: rotate3d(1, 1, 1, 0);
+    }
+    35%{
+        transform: rotate3d(10, 1, 1, 45deg);
+    }
+    75%{
+        transform: rotate3d(1, 15, 1, -45deg);
+    }
+    100%{
+        transform: rotate3d(1, 1, 1, 0);
+    }
 }
